# AI-Insurance-Claim-System

./: .gitignore  main.py  pyproject.toml  streamlit_app.py
src/api/v1/agents/: rag_answer_agent.py
src/api/v1/routes/: admin.py  query.py
src/api/v1/schemas/: query_schema.py
src/api/v1/services/: query_service.py  upload_service.py
src/api/v1/tools/: fts_search_tool.py  hybrid_search_tool.py  vector_search_tool.py
src/core/: helper.py
src/ingestion/: ingestion.py
