[project]
name = "ai-insurance-claim-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.135.2",
    "langchain-community>=0.4.1",
    "langchain-postgres>=0.0.17",
    "langchain[google-genai]>=1.2.13",
    "psycopg2-binary>=2.9.11",
    "pypdf>=6.9.2",
    "python-multipart>=0.0.22",
    "python-dotenv>=1.2.2",
    "tiktoken>=0.12.0",
    "uvicorn>=0.42.0",
    "psycopg>=3.3.3",
    "streamlit>=1.43.0",
    "requests>=2.32.0",
]
